--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ buildscript {
         mavenCentral()
 		mavenLocal()
         maven {
-            name "jboss"
             url "http://repository.jboss.org/nexus/content/groups/public/"
         }
     }
@@ -23,57 +22,68 @@ version = '1.2.3-SNAPSHOT'
 
 defaultTasks 'classes'
 
-targetCompatibility = "1.6"
-sourceCompatibility = "1.6"
+targetCompatibility = "1.8"
+sourceCompatibility = "1.8"
 
 repositories {
     mavenCentral()
     mavenLocal()
     maven {
-        name "jboss"
         url "http://repository.jboss.org/nexus/content/groups/public/"
     }
 }
 
 ext {
-    expectedGradleVersion = '1.9'
-    spock = ['org.spockframework:spock-core:0.5-groovy-1.8@jar',
-            'org.hamcrest:hamcrest-core:1.2.1@jar',
-            'org.hamcrest:hamcrest-library:1.2.1@jar',
-            'cglib:cglib-nodep:2.2',
-            'org.objenesis:objenesis:1.2'
+    expectedGradleVersion = '4.10.2'
+    spock = ['org.spockframework:spock-core:1.2-groovy-2.4',
+             'org.codehaus.groovy:groovy-all:2.4.15',
+             'org.hamcrest:hamcrest-core:1.3',
+             'org.hamcrest:hamcrest-library:1.3',
+             'cglib:cglib-nodep:3.2.9',
+             'org.objenesis:objenesis:2.6'
     ]
-    jmock = ['org.jmock:jmock:2.5.1@jar',
-            'org.hamcrest:hamcrest-core:1.1@jar',
-            'org.jmock:jmock-junit4:2.5.1@jar',
-            'org.jmock:jmock-legacy:2.5.1@jar',
-            'org.objenesis:objenesis:1.2',
-            'cglib:cglib-nodep:2.2'
+    jmock = ['org.jmock:jmock:2.9.0@jar',
+             'org.hamcrest:hamcrest-core:1.3',
+             'org.jmock:jmock-junit4:2.9.0',
+             'org.jmock:jmock-legacy:2.9.0',
+             'cglib:cglib-nodep:3.2.9',
+             'org.objenesis:objenesis:2.6'
     ]
 }
 
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile 'org.jboss.jdocbook:jdocbook-core:1.1.0'
+    compile 'org.jboss.jdocbook:jdocbook-core:1.1.1'
     compile 'org.apache.ant:ant:1.7.0' //don't see why we need this here
 
     compile localGroovy()
 
-    testCompile 'junit:junit:4.8.1'
+    testCompile 'junit:junit:4.12',
+            'commons-lang:commons-lang:2.6'
     testCompile jmock
     testCompile spock
-    testCompile 'org.slf4j:slf4j-simple:1.6.1@jar'
-    testCompile 'org.slf4j:jcl-over-slf4j:1.6.1@jar'
+    testCompile 'org.slf4j:slf4j-simple:1.7.2',
+            'org.slf4j:jcl-over-slf4j:1.7.2'
+
+    testCompile 'junit:junit:4.12',
+            'commons-lang:commons-lang:2.6'
+
+    testCompile 'org.apache.ivy:ivy:2.3.0'
+
 }
 
-manifest.mainAttributes(
-        provider: 'gradle',
-        'Implementation-Url': 'http://jboss.org',
-        'Implementation-Version': version,
-        'Implementation-Vendor': 'JBoss.org',
-        'Implementation-Vendor-Id': 'org.jboss'
-)
+jar {
+    manifest {
+        attributes(
+                "Implementation-Title": "Gradle",
+                'Implementation-Url': 'http://jboss.org',
+                'Implementation-Version': version,
+                'Implementation-Vendor': 'JBoss.org',
+                'Implementation-Vendor-Id': 'org.jboss'
+        )
+    }
+}
 
 publishing {
     publications {
@@ -155,6 +165,7 @@ publishing {
         }
     }
 }
+
 
 model {
     tasks.generatePomFileForMavenJavaPublication {
